--- a/templates/chat_layout.html
+++ b/templates/chat_layout.html
@@ -4,6 +4,8 @@
         <title>{% block title %}{% endblock %}</title>
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.11/handlebars.min.js"></script>
+        {% block other_head %}{% endblock %}
     </head>
     <body>
         <div class="container">
