--- a/templates/create_channel.html
+++ b/templates/create_channel.html
@@ -1,12 +1,13 @@
-{% extends "chat_layout.html" %}
-
-{% block title %}
-      Channel list
-{% endblock %}
-
-{% block body %}
-    <h1>Create a new channel</h1>
-    <div>
-      TODO
-    </div>
-{% endblock %}
+<!DOCTYPE html>
+<html>
+    <head>
+      <script>
+        document.addEventListener('DOMContentLoaded', alert('BO BO BELL BUNGALOWS'));
+      </script>
+    </head>
+    <body>
+      <h1>
+        BELLOW
+      </h1>
+    </body>
+</html>
